P_FINAL_COMPILADORES/grammar.txt

Program -> main Block
Block -> { Decls Stmts }
Decls -> Decls_1
Decls_1 -> Decl Decls_1 
Decls_1 -> ε
Decl -> Type id ;
Type -> int 
Type -> float
Type -> boolean
Type -> string
Stmts -> Stmts_1
Stmts_1 -> Stmt Stmts_1 
Stmts_1 -> ε
Stmt -> id = Bool ; 
Stmt -> if Fif 
Stmt -> while ( Bool ) Stmt endwhile 
Stmt -> print () ;
Stmt -> Block
Fif -> ( F(
F( -> Bool FBool
FBool -> ) F)
F) -> Stmt FStmt
FStmt -> endif 
FStmt -> else Stmt endif
Rel -> Expr FExpr
FExpr -> le Expr 
FExpr -> leq Expr 
FExpr -> geq Expr 
FExpr -> ge Expr 
FExpr -> ε
Expr -> Term Expr_1
Expr_1 -> + Term Expr_1 
Expr_1 -> - Term Expr_1 
Expr_1 -> ε
Term -> Unary Term_1
Term_1 -> * Unary Term_1 
Term_1 -> / Unary Term_1 
Term_1 -> ε
Unary -> ! Unary 
Unary -> Factor
Factor -> ( Bool ) 
Factor -> id 
Factor -> int 
Factor -> string
